Fixed the width of tabs and alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -600,11 +600,21 @@ font-weight: bold;
   padding: 6px 20px; /* Adjust padding as needed */
   font-size: 16px; /* Adjust font size as needed */
   cursor: pointer; /* Ensure cursor changes on hover */
+  margin-right: 30px;
 }
 
 .follow-btn-profile button:hover {
   background-color: #9852a6; /* Slightly darker shade for hover effect */
   color: white; /* White text color on hover */
+}
+
+.options-icon-follow {
+  margin-top: 12px; /* Space between name and options icon */
+  margin-left: 1220px;
+  color: #999;
+  cursor: pointer;
+  text-align: center;
+  transform: rotate(90deg);
 }
 
 /* Tabs container */
@@ -616,12 +626,20 @@ font-weight: bold;
 
 .nav-tabs {
   border-bottom: 2px solid #ad88c6; /* Lilac border for tabs */
+  display: flex;
+}
+
+.nav-item {
+  margin: 0; /* Remove default margin */
 }
 
 .nav-tabs .nav-link {
   color: #ad88c6; /* Lilac text color for tabs */
   border-radius: 5px;
   border-color: #ad88c6;
+  margin-right: -1px; /* Adjust margin to remove spacing */
+  width: 150px;
+  text-align: center;
 }
 
 .nav-tabs .nav-link.active {
@@ -666,6 +684,7 @@ font-weight: bold;
 }
 
 .request-square:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #e0e0e0; /* Darker grey on hover */
 }
 
@@ -688,7 +707,7 @@ font-weight: bold;
   margin-top: 10px;
 }
 
-.options-icon {
+.options-icon-requests {
   margin-top: 5px; /* Space between name and options icon */
   margin-left: 280px;
   color: #999;
@@ -700,4 +719,5 @@ font-weight: bold;
 .options-icon:hover {
   color: #666;
 }
+
 
